# fishmael-py

./: pyproject.toml  test.py
src/fishmael/: __init__.py  client.py  event_manager.py  stream.py
src/fishmael/events/: __init__.py  base.py  interaction.py  stream.py
src/fishmael/internal/: __init__.py  async_utils.py  class_utils.py
src/fishmael/models/: __init__.py  deserialise.py  protocol.py  shard.py
src/fishmael/models/interaction/: __init__.py  command_interaction.py  component_interaction.py
src/fishmael/rest/: __init__.py  client.py  route.py
